--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.2
+  flutter_bloc: 
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.3.0
