--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,32 +29,27 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.2
-  flutter_bloc: 
+  cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.3.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: null
   font_awesome_flutter: null
   get_it: ^7.6.0
   go_router: null
   google_fonts: null
-  hive: 
-  hive_flutter: 
-  
-dev_dependencies:
+  hive: null
+  hive_flutter: null
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+dev_dependencies:
+  build_runner: null
   flutter_lints: ^2.0.0
-  hive_generator: 
-  build_runner: 
   flutter_test:
     sdk: flutter
+  hive_generator: null
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
